--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,15 +13,22 @@ sites:
 
 status-website:
   cname: status.emailconnect.eu
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  favicon: https://emailconnect.eu/assets/favicon-DmDkn9pI.ico
+  faviconSvg: https://emailconnect.eu/assets/images/favicon-DiWvSVNU.svg
+  logoUrl: https://raw.githubusercontent.com/xadi-hq/emailconnect-status/master/assets/logo-light.png
   name: EmailConnect
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**EmailConnect** turns emails into webhooks, 100% EU operated."
+  introMessage: This is a status page showing **real-time** up-time data from our infrastructure. [**Get started free**](https://emailconnect.eu/?ref=statuspage)
+  metaTags:
+    - name: "robots"
+      content: "noindex"
   navbar:
+    - title: Home
+      href: https://emailconnect.eu/?ref=statuspage
+    - title: Help center
+      href: https://emailconnect.eu/help?ref=statuspage
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
