--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,12 +1,13 @@
-# Change these first
 owner: xadi-hq
 repo: emailconnect-status
 
 sites:
   - name: Web application & API
     url: https://emailconnect.eu/health
-  - name: Postfix e-mail server
-    url: https://emailconnect.eu/health/postfix
+  - name: Incoming email processor
+    url: https://emailconnect.eu/health/mail
+    expectedStatusCodes:
+      - 200
   - name: mx1.emailconnect.eu
     url: mx1.emailconnect.eu
     port: 25
